Final version of the Quixo project!!!!

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
 CI -Works/CI - Set-covering
-CI -Works/CI - Set-covering
-CI -Works/CI - Set-covering
-CI -Works/CI - Set-covering
+quixo/__pycache__/*.*
